<resources>
    <string name="app_name">Notify</string>

    <string name="todo">ToDo</string>
    <string name="content_description_todo">Todo Icon</string>
    <string name="microphone">Microphone</string>
    <string name="content_description_microphone">Microphone Icon</string>
    <string name="insert_photo">Insert Photo</string>
    <string name="content_description_insert_photo">Insert Photo Icon</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search Icon</string>
    <string name="edit">Edit</string>
    <string name="content_description_edit">Edit Menu</string>
    <string name="view">View</string>
    <string name="content_description_view">View Menu</string>
    <string name="sort">Sort</string>
    <string name="content_description_sort">Sort Menu</string>
    <string name="add_note_fab">Add Note Floating Action Button</string>
    <string name="notes">Notes</string>
    <string name="reminder">Reminder</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="simple_list">Simple List</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="add_edit_note">Edit Note</string>
    <string name="task">Task</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="pin">Pin</string>
    <string name="add_content">Add Content</string>
    <string name="background_palette">Background Palette</string>
    <string name="delete">Delete</string>
    <string name="make_copy">Make a copy</string>
    <string name="labels">Labels</string>
    <string name="help_and_feedback">Help &amp; Feedback</string>
    <string name="share">Share</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_image">Add Image</string>
    <string name="drawing">Drawing</string>
    <string name="recording">Recording</string>
    <string name="hide_checkbox">Hide Checkboxes</string>
    <string name="title">Title</string>
    <string name="list_item">List Item</string>

    <string name="mail_subheader_title">Mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>