<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:contentDescription="@string/content_description_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/view"
        android:title="@string/view"
        android:contentDescription="@string/content_description_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        android:contentDescription="@string/content_description_sort"
        app:showAsAction="never" />

</menu>