<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_options_modal_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.taskFragment.MoreOptionsModalBottomSheet">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/delete_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_trash_icon"
        android:drawablePadding="8dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/make_copy_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_copy"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_content_copy"
        android:drawablePadding="8dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_share"
        android:drawablePadding="8dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labels_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labels"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_label"
        android:drawablePadding="8dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/help_and_feedback_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_and_feedback"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_help"
        android:drawablePadding="8dp" />

</androidx.appcompat.widget.LinearLayoutCompat>